--- a/views/game.pug
+++ b/views/game.pug
@@ -4,3 +4,6 @@ block content
   .container.text-center
     h1= title
     p Game View
+
+block scripts
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js')
