--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,6 @@
-.container
-  .row.text-center
-    .col-md-12
-      h4 Footer goes here
+.footer
+  |Developed by Daven Wu and James Paik
+  br
+  a(href='https://github.com/jpaik/pseudonyms', target='_blank')
+    i.fa.fa-github
+    |&nbsp;Github
