--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -3,16 +3,152 @@
 
 $bcolor: #fff;
 
-body{
+html, body{
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+}
+body{
   background-color: $bcolor;
   font-family: $font-family-sans-serif;
   font-weight: $font-weight-regular;
   font-size: $font-size-base;
+  color: $text-color;
+  > .content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    @include linear-gradient(135deg, #514A9D 0%, #24C6DC 100%);
+  }
 }
 
-h1,h2,h3,h4{
+h1, h2, h3, h4{
   font-family: $headings-font-family;
   font-weight: $font-weight-regular;
+}
+
+a {
+  outline: none;
+  color: $text-color;
+  @include transition(color .3s ease);
+
+  &:hover {
+    text-decoration: none;
+    color: $color-dark;
+    @include transition(color .3s ease);
+  }
+
+  &:active,
+  &:focus {
+    text-decoration: none;
+  }
+}
+
+.row {
+  margin: 0;
+}
+
+/*Footer*/
+.footer{
+  font-size: .9em;
+}
+
+/*
+=========================
+Home
+=========================
+*/
+.home{
+  z-index: 1;
+  padding: 40px;
+  @include box-shadow(0, 0, 10px, rgba(0,0,0,.2));
+  background: rgba(255,255,255,.15);
+}
+
+/*
+=========================
+Button Styling
+=========================
+*/
+.btn {
+  font-weight: $font-weight-regular;
+  border-radius: 0;
+  border-color: $text-color-light;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  font-family: $headings-font-family;
+  font-weight: $font-weight-bold;
+  padding: 10px 20px;
+  position: relative;
+  overflow:hidden;
+  color: $text-color-inverse;
+  @include transition(all .3s ease);
+  &:hover {
+    background-color: transparent;
+    color: $text-color;
+    border-color: $text-color;
+    &:after{
+      width: 140%;
+      left: -25%;
+    }
+    @include transition(all .3s ease);
+  }
+  &:after{
+    position: absolute;
+    content: '';
+    width: 0;
+    left: -105%;
+    z-index: -1;
+    bottom: 0;
+    height: 140%;
+    @include linear-gradient(135deg, #00d2ff 0%, #3a7bd5 100%);
+    @include transform(skewX(15deg));
+    @include transition(all .3s ease);
+  }
+}
+.row.buttons{
+  margin: 40px 0;
+  padding: 40px 0;
+  border-top: 1px solid $text-color-light;
+  border-bottom: 1px solid $text-color-light;
+  .btn.new{
+      margin-right: 10px;
+      @include screen('mobile'){
+          margin-right: 0px;
+          margin-bottom: 10px;
+      }
+  }
+  .btn.join{
+    &:after{
+      @include linear-gradient(135deg, #93F9B9 0%, #1D976C 100%);
+    }
+  }
+  .btn{
+    min-width: 40%;
+    &:focus{
+      background: transparent;
+      color: $text-color;
+      border-color: #fff;
+      &:after{
+        left: 105%;
+      }
+    }
+    &:active, &:active:focus{
+      background: transparent;
+      color: $text-color;
+      border-color: lighten($text-color-inverse, 20);
+      @include box-shadow(0, 0, 5px, rgba(0,0,0,.4), true);
+      &:after{
+        left: 105%;
+      }
+    }
+    @include screen('mobile'){
+      display: block;
+      min-width: 60%;
+    }
+  }
 }
