--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,21 +9,10 @@ doctype html
 html.no-js(lang='en')
   //<![end if]
   head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title #{title} | Pseudonyms
-    meta(name="description", content=description)
-    meta(name="author", content=author)
-    meta(name="viewport", content='width=device-width, initial-scale=1')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/css/style.css')
-  body
     include partials/header
-
-    block content
     
-    include partials/footer
+  body
+    .content
+      block content
+    
     block scripts
