--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,4 +1,16 @@
-.container
-  .row.text-center
-    .col-md-12
-      h4 Header goes here
+meta(charset='utf-8')
+meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+title #{title} | Pseudonyms
+meta(name="description", content=description)
+meta(name="author", content='Pseudonyms')
+meta(name="viewport", content='width=device-width, initial-scale=1')
+meta(name="theme-color", content=teamColor)
+
+link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
+link(rel='stylesheet', href='https://cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.css', integrity="sha256-1Dd1LfK9ogDaOMgl1HC3rF4/7NwlG4w5K0brANd/WXQ=", crossorigin="anonymous")
+link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
+link(rel='stylesheet', href='/css/style.css')
+  
+script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=", crossorigin="anonymous")
+script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
+script(src='https://cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.js', integrity="sha256-5DSTcjlCWf/JPl/ULIJojOlV9Rbzk0xgD3abApqBGIY=", crossorigin="anonymous")
