Add popup for home page

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -97,6 +97,9 @@ Button Styling
     }
     @include transition(all .3s ease);
   }
+  &:focus{
+    outline: none;
+  }
   &:after{
     position: absolute;
     content: '';
