--- a/views/404.pug
+++ b/views/404.pug
@@ -1,17 +1,6 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title Not Found | Pseudonyms
-    meta(name="description", content=description)
-    meta(name="author", content=author)
-    meta(name="viewport", content='width=device-width, initial-scale=1')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+extends layout
 
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/css/style.css')
+block content
   body
     .contanier
        .row.text-center
