--- a/views/index.pug
+++ b/views/index.pug
@@ -16,4 +16,5 @@ block content
         .col-md-12
           include partials/footer
 block scripts
+    script(src='/js/jscookie.min.js')
     script(src='/js/home.js')
