--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,6 +1,9 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-title #{title} | Pseudonyms
+if title == "Home"
+  title Pseudonyms
+else
+  title #{title} | Pseudonyms  
 meta(name="description", content=description)
 meta(name="author", content='Pseudonyms')
 meta(name="viewport", content='width=device-width, initial-scale=1')
