--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,6 +8,9 @@ meta(name="description", content=description)
 meta(name="author", content='Pseudonyms')
 meta(name="viewport", content='width=device-width, initial-scale=1')
 
+meta(name="apple-mobile-web-app-capable", content="yes")
+meta(name="apple-mobile-web-app-status-bar-style", content="black-translucent")
+
 link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
 link(rel='stylesheet', href='https://cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.css', integrity="sha256-1Dd1LfK9ogDaOMgl1HC3rF4/7NwlG4w5K0brANd/WXQ=", crossorigin="anonymous")
 link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
