--- a/views/game.pug
+++ b/views/game.pug
@@ -3,8 +3,14 @@ extends layout
 block content
   .container
     .row
-      .col-md-6.col-md-offset-3
+      .col-md-4.col-md-offset-4
         #{'view'}.lobby
+          .settings
+            h1
+              span.pull-right
+                i.fa.fa-cog
+              |Code:&nbsp;
+              span.gameCode            
           .users
             .red.team(data-team="red")
               h1
@@ -12,9 +18,9 @@ block content
                   a.btn.btn-default Join Team
                 |Red Team
               ul.master
-                li                
-                  i.fa.fa-user-secret
-                  |&nbsp; Become Spymaster
+                //- li.nomaster
+                //-   i.fa.fa-user-secret
+                //-   |&nbsp; No Spymaster
               ul.player
             .blue.team(data-team="blue")
               h1
@@ -22,20 +28,20 @@ block content
                   a.btn.btn-default Join Team
                 |Blue Team
               ul.master
-                li                
-                  i.fa.fa-user-secret
-                  |&nbsp; Become Spymaster
+                //- li.nomaster
+                //-   i.fa.fa-user-secret
+                //-   |&nbsp; No Spymaster
               ul.player
           .buttons
             .row.text-center
-              .col-md-6
+              .col-xs-6
                 a.btn.btn-success(data-type="ready") Ready Up
-              .col-md-6
+              .col-xs-6
                 a.btn.btn-default(data-type="leave") Leave
         #{'view'}.game.collapse
         #{'view'}.end.collapse
 
 block scripts
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js')
-  script(src='/js/jscookie.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js', integrity="sha256-fiM0lX3OYzf0FfLBeLqFuCokh+rf1VhI/eanPbzldUM=", crossorigin="anonymous")
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.min.js', integrity="sha256-NjbogQqosWgor0UBdCURR5dzcvAgHnfUZMcZ8RCwkk8=", crossorigin="anonymous")
   script(src='/js/game.js')
