Add Description and more footer links

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,8 @@
 .footer
+  a(href="/about") About
+  |&nbsp;|&nbsp;
+  a(href="//cosinic.com") Cosinic 
+  br
   |Developed by Daven Wu and James Paik
   br
   a(href='https://github.com/jpaik/pseudonyms', target='_blank')
