--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,9 +2,9 @@ meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 if title == "Home"
   title Pseudonyms
+  meta(name="description", content='Pseudonyms is a game where two opposing teams must find all of their media contacts first in order to publish propaganda, but they are using pseudonyms to keep safe from the government.')
 else
   title #{title} | Pseudonyms  
-meta(name="description", content=description)
 meta(name="author", content='Pseudonyms')
 meta(name="viewport", content='width=device-width, initial-scale=1')
 
