--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -64,16 +64,25 @@ a {
 
 /*
 =========================
-Home
+Home + Simple Layouts
 =========================
 */
-.home{
+.home, .main-layout{
   z-index: 1;
   padding: 40px;
   @include box-shadow(0, 0, 10px, rgba(0,0,0,.2));
   background: rgba(255,255,255,.15);
 }
-
+.main-layout{
+  h1{
+    margin: 10px 0;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #fff;
+  }
+  h2{
+    margin: 10px 0;
+  }
+}
 /*
 =========================
 Button Styling
@@ -160,5 +169,45 @@ Button Styling
       display: block;
       min-width: 60%;
     }
+  }
+}
+
+/*
+=========================
+About Page
+=========================
+*/
+.main-layout{
+  .toggles{
+    margin-top: 10px;
+    >div{
+      padding-right: 0px;
+    }
+    .btn{
+      width: 100%;
+      padding: 6px 10px;
+      font-size: 1em;
+      border-color: #fff;
+      border-bottom: none;
+      &.active{
+        background-color: #3a7bd5;
+        color: #fff;
+      }
+    }
+  }
+  .contents{
+    border: 1px solid #fff;
+    padding: 10px;
+    text-align: left;
+    margin-bottom: 20px;
+
+    overflow-y: auto;
+    max-height: 300px;
+    p{
+      font-size: 1.25em;
+    }
+  }
+  .instructions{
+    display: none;
   }
 }
