--- a/views/game.pug
+++ b/views/game.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   .container
     .row
-      .col-md-4.col-md-offset-4
+      .col-md-4.col-md-offset-4.col-xs-12.col-xs-offset-0
         #{'view'}.lobby
           .settings
             h1
@@ -39,6 +39,12 @@ block content
               .col-xs-6
                 a.btn.btn-default(data-type="leave") Leave
         #{'view'}.game.collapse
+          .displays
+          .gameContainer
+          .actions
+            .row
+              .col-xs-6
+                a.btn.btn-danger(data-action="skip") Skip Turn
         #{'view'}.end.collapse
 
 block scripts
