--- a/views/game.pug
+++ b/views/game.pug
@@ -44,7 +44,8 @@ block content
           .actions
             .row
               .col-xs-6
-                a.btn.btn-danger(data-action="skip") Skip Turn
+                a.btn.btn-danger(data-type="skip") Skip Turn
+                a.btn.btn-danger(data-type="leave") Leave
         #{'view'}.end.collapse
 
 block scripts
