Add Hint Display

--- a/views/game.pug
+++ b/views/game.pug
@@ -40,6 +40,9 @@ block content
                 a.btn.btn-default(data-type="leave") Leave
         #{'view'}.game.collapse
           .displays
+            .row
+              .col-xs-6
+                .hint
           .gameContainer
           .actions
             .row
