Add overlay and more switch functions

--- a/src/scss/base/_additions.scss
+++ b/src/scss/base/_additions.scss
@@ -53,6 +53,9 @@
   margin-top: 0;
   text-transform: uppercase;
 }
+#swal-input_number{
+  margin-top: 0;
+}
 .swal2-modal .swal2-file, .swal2-modal .swal2-input, .swal2-modal .swal2-textarea{
   color: $text-color-inverse;
   border-radius: 0;
