--- a/views/game.pug
+++ b/views/game.pug
@@ -42,8 +42,13 @@ block content
           .displays
             .row
               .col-xs-6
-                .hint
+                .hintDiv
+                  span.lab Hint:
+                  span.hint
+                  span.lab Number:
+                  span.hintNum
           .gameContainer
+          .gameOverlay
           .actions
             .row
               .col-xs-6
